Fixed the rendering of the PDF invoices. Due do DomPDF's buginess, most of the border settings in CSS are weird. Side info: Border-collapse is not supported by DomPDF. Added pagination to the invoice list.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,9 +174,14 @@ body {
     clear:both;
 }
 
-.center_button{
+.center_button,
+.invoice_pagination{
     margin:0 auto;
     display: block;
+}
+
+.invoice_pagination{
+    width:150px;
 }
 
 hr{
