--- a/public/css/style_pdf.css
+++ b/public/css/style_pdf.css
@@ -75,6 +75,11 @@ body {
 .invoice_elements{
     height:580px;
 }
+
+.invoice_elements_pdf{
+    height:560px;
+}
+
 .pdf_table{
     width:95%;
     margin:0 auto;
@@ -100,7 +105,15 @@ body {
 
 .pdf_footer {
     width:950px;
-    margin-bottom:0;
+    padding:10px;
+    padding-top:0;
+}
+
+.pdf_footer_pdf{
+    width:700px;
+    padding:10px;
+    padding-top:0;
+    margin-left:40px;
 }
 
 .totals_table{
@@ -109,39 +122,80 @@ body {
     font-size:14px;
 }
 
+
 .totals_table td{
     padding:3px;
     border:1px solid #000000;
     border-collapse: collapse;
 }
-.special{
-    border-left:0 !important;
-    border-top:0 !important;
-    border-bottom:0 !important;
+
+.totals_table_pdf{
+    font-size:14px;
+}
+
+
+.totals_table_pdf td{
+    padding:3px;
+}
+
+
+.first{
+    border-top:1px solid black;
+    border-left:1px solid black;
+}
+
+.second{
+    border-top:1px solid black;
+    border-left:1px solid black;
+    border-bottom:1px solid black;
+}
+
+
+.last{
+    border-left:1px solid black;
+    border-bottom:1px solid black;
+}
+
+.right{
+    border-right:1px solid black;
 }
 
 .footer_vat{
     float:left;
-    width:20%;
+    width:25%;
     text-align:left;
-    border:1px solid red;
 }
 
 .footer_message{
     float:left;
-    width:40%;
-    text-align:center;
+    width:35%;
     text-transform: uppercase;
-    border:1px solid blue;
-
 }
 
 .footer_price{
     float:left;
-    width:13%;
-    text-align:right;
-    border:1px solid green;
+    width:15%;
+    text-align:right !important;
 }
+
+.pdf_price{
+    width:30% !important;
+    float:right !important;
+    margin-right:-30px;
+}
+.pdf_message{
+    width:40% !important;
+    bottom:0;
+}
+.pdf_message p{
+    margin-top:40px;
+}
+
+.pdf_vat{
+    width:25% !important;
+}
+
+
 
 .clear{
     clear:both;
